--- a/projecjs.html
+++ b/projecjs.html
@@ -31,7 +31,7 @@
                     <a href="https://github.com/Hades2002/educAR" target="_blank">Code</a>
                     <a href="https://educarapp.herokuapp.com" target="_blank">Live view</a>
                 </p>
-                <a href="https://educarapp.herokuapp.com target="_blank">
+                <a href="https://educarapp.herokuapp.com" target="_blank">
                     <img src="./assets/img/educar.png">
                 </a>
             </section>
@@ -67,7 +67,7 @@
                     <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">Live view</a>
                 </p>
                 <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">
-                    <img src="/assets/img/law.png">
+                    <img src="./assets/img/law.png">
                 </a>
             </section>
             <hr>
