--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Silva Miguel</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon-32x32.png">
 </head>
 <body>
     <header>
@@ -22,8 +23,8 @@
         <hr>
         <section>
             <p>
-                <a href="https://hades2002.github.io/webpersonal/projecjs.html">Projects</a>
-                <a href="https://hades2002.github.io/webpersonal/assets/resume/resume.pdf" target="_blank">Resume</a>
+                <a href="./projecjs.html">Projects</a>
+                <a href="./assets/resume/resume.pdf" target="_blank">Resume</a>
             </p>
             <p>
                 <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">Email</a>
@@ -35,9 +36,9 @@
         </section>
         <hr>
         <section>
-            <p>Hello! I am Silva Miguel from Buenos Aires, Argentina, passionate about technology, entrepreneurship and simplifying processes.</p>
-            <p>I graduated as a computer technician and I am currently studying computer science engineering at the <strong>University of Buenos Aires. </strong>.</p>
-            <p>Currently in my career as a <strong>backend developer</strong>, targeting software developer.</p>
+            <p>Hi! I'm Silva Miguel from Buenos Aires, Argentina, passionate about technology, entrepreneurship and simplifying processes.</p>
+            <p>I graduated as a computer technician and I am currently studying computer science engineering at the <strong>University of Buenos Aires. </strong></p>
+            <p>Currently in my career as a <strong>backend developer</strong>, targeting Software developer.</p>
         </section>
     </main>
     <footer>
