--- a/projecjs.html
+++ b/projecjs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silva Miguel - Projects</title>
-    <link rel="stylesheet" href="https://hades2002.github.io/webpersonal/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <body>
@@ -18,20 +18,25 @@
             <hr>
             <section>
                 <p><strong>Backend developer</strong> projects, find <a href="./assets/resume/resume.pdf" target="_blank">resume (CV) here</a></p>
-                <p><strong>Skillset</strong> - HTML5, CSS, JavaScript, Node.js, C#, React, Boostrap, Git, GitHub.</p>
-                <p>Contact on <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> or                 <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                <p>More on <a href="https://hades2002.github.io/webpersonal/index.html">home</a></p>
+                <p>
+                    <strong>Software skils</strong><br>
+                    <strong>Proficient in: </strong>Javascript, Node.js, HTML5, CSS, C#. <br>
+                    <strong>Worked in: </strong>React.js, Amazon Web Services.<br>
+                    <strong>Interests in: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
+                    <p>Contact on <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> or                 <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
+                    <p>More on <a href="./index.html">home</a></p>
                 </p>
             </section>
             <hr>
             <section>
                 <p><b>Web Application</b> - educAR</p>
-                <p>The objective of this web application was to be based on the official CLASSROM page, and to be able to replicate all its logic behind it and build a complete application. It was a project carried out in my student stage in the subject "PROFESSIONALISM PRACTICES" as a Computer Technician. Some improvements are missing, such as mail verification, creating meetings, private live chat and among many other things. Source code coming soon.</P>
+                <p>
+                    The objective of this web application was to be based on the official page of the classroom, and to be able to replicate all its logic behind and build a complete application. It was a project carried out during my student days in the subject "PROFESSIONALISM PRACTICES" as a Computer Technician.</p>
                 <p>
                     <a href="https://github.com/Hades2002/educAR" target="_blank">Code</a>
                     <a href="https://educarapp.herokuapp.com" target="_blank">Live view</a>
                 </p>
-                <a href="https://educarapp.herokuapp.com" target="_blank">
+                <a href="https://educarapp.herokuapp.com target="_blank">
                     <img src="./assets/img/educar.png">
                 </a>
             </section>
@@ -67,7 +72,7 @@
                     <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">Live view</a>
                 </p>
                 <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">
-                    <img src="./assets/img/law.png">
+                    <img src="/assets/img/law.png">
                 </a>
             </section>
             <hr>
