--- a/projecjs.html
+++ b/projecjs.html
@@ -48,7 +48,11 @@
                     <a href="https://github.com/Hades2002/bot_torneoTYRAKZ" target="_blank">Code</a>
                 </p>
                 <a href="https://github.com/Hades2002/bot_torneoTYRAKZ" target="_blank">
-                    <img src="./assets/img/discord.jpg">
+                    <video  width="100%" controls autoplay loop>
+                        <source src="https://user-images.githubusercontent.com/32782329/136644129-759dc21b-0626-4d07-9710-80c87de0dd39.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                      </video>
                 </a>
             </section>
             <hr>
