--- a/projecjs.html
+++ b/projecjs.html
@@ -36,9 +36,27 @@
                     <a href="https://github.com/Hades2002/educAR" target="_blank">Code</a>
                     <a href="https://educarapp.herokuapp.com" target="_blank">Live view</a>
                 </p>
-                <a href="https://educarapp.herokuapp.com target="_blank">
+                <a href="https://educarapp.herokuapp.com" target="_blank">
                     <img src="./assets/img/educar.png">
                 </a>
+            </section>
+            <hr>
+            <section>
+                <p><b>Chrome extension</b> - KRÜ esports </p>
+                <strong>PROJECT PAUSED</strong>
+                <p>The objective of this project is to notify the matches and transmissions of the sports team KRU SPORT. Using the twitch api. Available only for Chrome browsers.
+                </p>
+                <p>
+                    <strong>
+                        NOT AVAILABLE</strong>
+                        <a href="" target="_blank">Code</a>
+                        <a href="" target="_blank">Live view</a>
+                </p>
+                <!---
+                    <a href="" target="_blank">
+                    </a>
+                    -->
+                <img src="/assets/img/kru.jpg">
             </section>
             <hr>
             <section>
@@ -66,6 +84,18 @@
                 <a href="https://github.com/Hades2002/bot_enggament" target="_blank">
                     <img src="./assets/img/telegram.png">
                 </a>
+            </section>
+            <hr>
+            <section>
+                <p><b>Web Scraping</b> - Price scraping for compragamer</p>
+                <p>The objective of this web scraping is to notify the user if the price or unit of the selected product increases in the compragamer store.
+                </p>
+                <p>
+                    <a href="https://github.com/Hades2002/bot_compragamer" target="_blank">Code</a>
+                </p>
+                    <a href="https://github.com/Hades2002/bot_compragamer" target="_blank">
+                        <img src="/assets/img/compragamer.jpg">
+                    </a>
             </section>
             <hr>
             <section>
