--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <hr>
         <section>
             <p>
-                <a href="./projects.html">Projects</a>
+                <a href="./projecjs.html">Projects</a>
                 <a href="./assets/resume/resume.pdf" target="_blank">Resume</a>
             </p>
             <p>
