--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
     <title>Silva Miguel</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon-32x32.png">
 </head>
-<body>
+<body class="s1">
     <header>
-        <nav>
-            <h1>Silva Miguel</h1>
-        </nav>
+        <h1>Hola, soy Silva Miguel👋</h1>
     </header>
     <main>
         <hr>
         <section>
-            <h4>Backend developer</h4>
-            <p>The function of good software is to make the apparent complex simple.</p>
+            <h2>Backend developer</h2>
+            <p>"La función de un buen software es hacer que lo complejo aparente ser simple"</p>
         </section>
         <hr>
         <section>
             <p>
-                <a href="./projecjs.html">Projects</a>
-                <a href="./assets/resume/resume.pdf" target="_blank">Resume</a>
+                <a href="./projecjs.html">Projectos</a>
+                <a href="./assets/resume/resume.pdf" target="_blank">Resumen</a>
             </p>
             <p>
                 <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">Email</a>
@@ -36,13 +34,14 @@
         </section>
         <hr>
         <section>
-            <p>Hi! I'm Silva Miguel from Buenos Aires, Argentina, passionate about technology, entrepreneurship and simplifying processes.</p>
-            <p>I graduated as a computer technician and I am currently studying computer science engineering at the <strong>University of Buenos Aires. </strong></p>
-            <p>Currently in my career as a <strong>backend developer</strong>, targeting Software developer.</p>
+            <p>¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.</p>
+            <p>Me gradué de técnico en computación y actualmente estudio ingeniería en informática en la <strong>Universidad de Buenos Aires. </strong></p>
+            <p>Actualmente en mi carrera como <strong>desarrollador back-end</strong>, dirigido a desarrollador de software.</p></p>
         </section>
+        <hr>
     </main>
     <footer>
-        <p><strong>Created with love 💓</strong></p>
+        <p><strong>Creado con amor y con el objetivo de : simple y eficaz 💓</strong></p>
     </footer>
 </body>
 </html>
