--- a/projecjs.html
+++ b/projecjs.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silva Miguel - Projects</title>
+    <title>Proyectos de Silva Miguel</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <body>
+    <body class="s1">
         <header>
-            <nav>
-                <h1>Silva Miguel - projects</h1>
-            </nav>
+            <h1>Proyectos📂</h1>
         </header>
         <main>
             <hr>
             <section>
-                <p><strong>Backend developer</strong> projects, find <a href="./assets/resume/resume.pdf" target="_blank">resume (CV) here</a></p>
+                <p><strong>Backend developer</strong> proyectos, encontrar <a href="./assets/resume/resume.pdf" target="_blank">mi resumen aqui</a></p>
                 <p>
                     <strong>Software skils</strong><br>
-                    <strong>Proficient in: </strong>Javascript, Node.js, HTML5, CSS, C#. <br>
-                    <strong>Worked in: </strong>React.js, Amazon Web Services.<br>
-                    <strong>Interests in: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
-                    <p>Contact on <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> or                 <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                    <p>More on <a href="./index.html">home</a></p>
+                    <strong>Competentes en: </strong>Javascript, Node.js, HTML5, CSS, C#. <br>
+                    <strong>Trabajé en: </strong>React.js, Amazon Web Services.<br>
+                    <strong>Intereses en: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
+                    <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
+                    <p>Más información <a href="./index.html">aquí</a></p>
                 </p>
             </section>
             <hr>
             <section>
                 <p><b>Web Application</b> - educAR</p>
                 <p>
-                    The objective of this web application was to be based on the official page of the classroom, and to be able to replicate all its logic behind and build a complete application. It was a project carried out during my student days in the subject "PROFESSIONALISM PRACTICES" as a Computer Technician.</p>
+                    <span>Node.js</span>
+                    <span>Boostrap 5</span>
+                </p>
+                <p>El objetivo de esta aplicación web fue basarse en la pagina oficial CLASSROM, y poder llegar a replicar toda su lógica detrás y llegar armar una aplicación completa. Fue un proyecto realizado en mi etapa estudiantil en la materia "PRACTICAS PROFESIONALIZANTES" como Técnico en Computación.</p>
                 <p>
-                    <a href="https://github.com/Hades2002/educAR" target="_blank">Code</a>
-                    <a href="https://educarapp.herokuapp.com" target="_blank">Live view</a>
+                    <a href="https://github.com/Hades2002/educAR" target="_blank">Código</a>
+                    <a href="https://educarapp.herokuapp.com" target="_blank">Vista previa</a>
                 </p>
                 <a href="https://educarapp.herokuapp.com" target="_blank">
                     <img src="./assets/img/educar.png">
@@ -43,14 +44,15 @@
             <hr>
             <section>
                 <p><b>Chrome extension</b> - KRÜ esports </p>
-                <strong>PROJECT PAUSED</strong>
-                <p>The objective of this project is to notify the matches and transmissions of the sports team KRU SPORT. Using the twitch api. Available only for Chrome browsers.
+                <p>
+                    <span>Javascript</span>
+                    <span>Api twitch</span>
                 </p>
+                <p>El objetivo de este proyecto es notificar los partidos y transmisiones del equipo deportivo KRU SPORT. Usando la API de contracción. Disponible solo para navegadores Chrome.</p>
                 <p>
                     <strong>
-                        NOT AVAILABLE</strong>
-                        <a href="" target="_blank">Code</a>
-                        <a href="" target="_blank">Live view</a>
+                        <a href="" target="_blank">Código/a>
+                        <a href="" target="_blank">Vista previa</a>
                 </p>
                 <!---
                     <a href="" target="_blank">
@@ -60,10 +62,14 @@
             </section>
             <hr>
             <section>
-                <p><b>Bot for discord</b> - tournamentTYRAKZ</p>
-                <p>The objective of the BOT was to create an advanced registration system set for competitive tournaments, where their teams can have personalized and exclusive voice channels for them.</p>
+                <p><b>Bot para discord</b> - tournamentTYRAKZ</p>
                 <p>
-                    <a href="https://github.com/Hades2002/bot_torneoTYRAKZ" target="_blank">Code</a>
+                    <span>Javascript</span>
+                    <span>Api discord</span>
+                </p>
+                <p>El objetivo del BOT fue crear un sistema de registración avanzado ambientado para torneos competitivos, donde sus equipos puedan tener canales de voz personalizados y exclusivos para ellos.</p>
+                <p>
+                    <a href="https://github.com/Hades2002/bot_torneoTYRAKZ" target="_blank">Código</a>
                 </p>
                 <a href="https://github.com/Hades2002/bot_torneoTYRAKZ" target="_blank">
                     <video  width="100%" controls autoplay loop>
@@ -75,11 +81,14 @@
             </section>
             <hr>
             <section>
-                <p><b>Bot for telegram</b> - RBM Bussines</p>
+                <p><b>Bot para telegram</b> - RBM Bussines</p>
                 <p>
-                    The objective of the BOT was to automate a user registry that started and ended without the presence of a human, where in that time interval the users registered to the list through a command. This would save staff.</p>
+                    <span>Javascript</span>
+                    <span>Api telegram</span>
+                </p>
+                <p>El objetivo del BOT fue automatizar un registro de usuarios que iniciaba y finalizaba sin presencia de un humano, donde en ese intervalo de tiempo los usuarios mediante un comando se registraban a la lista. Esto permitiría ahorrar personal.</p>
                 <p>
-                    <a href="https://github.com/Hades2002/bot_enggament" target="_blank">Code</a>
+                    <a href="https://github.com/Hades2002/bot_enggament" target="_blank">Código</a>
                 </p>
                 <a href="https://github.com/Hades2002/bot_enggament" target="_blank">
                     <img src="./assets/img/telegram.png">
@@ -87,11 +96,14 @@
             </section>
             <hr>
             <section>
-                <p><b>Web Scraping</b> - Price scraping for compragamer</p>
-                <p>The objective of this web scraping is to notify the user if the price or unit of the selected product increases in the compragamer store.
+                <p><b>Web Scraping</b> - Scraping precio de compragamer</p>
+                <p>
+                    <span>Javascript</span>
+                </p>
+                <p>El objetivo del BOT fue crear un aviso personalizado mediante la herramienta webScraping. Donde uno seleccionara los productos que desee y por vía Telegram le avisara cuando este en stock, sin stock, o si bajo de precio.
                 </p>
                 <p>
-                    <a href="https://github.com/Hades2002/bot_compragamer" target="_blank">Code</a>
+                    <a href="https://github.com/Hades2002/bot_compragamer" target="_blank">Código</a>
                 </p>
                     <a href="https://github.com/Hades2002/bot_compragamer" target="_blank">
                         <img src="/assets/img/compragamer.jpg">
@@ -99,12 +111,16 @@
             </section>
             <hr>
             <section>
-                <p><b>Email marketing</b> - Email Marketing for Cooler Master</p>
+                <p><b>Email marketing</b> - Cooler Master</p>
                 <p>
-                    The objective of this email marketing is to show the new products that went on sale.</p>
+                    <span>HTML</span>
+                    <span>Boostrap 5</span>
+                </p>
                 <p>
-                    <a href="https://github.com/Hades2002/emailmarketing_coolermaster" target="_blank">Code</a>
-                    <a href="https://hades2002.github.io/emailmarketing_coolermaster/" target="_blank">Live view</a>
+                    El objetivo de este email marketing es mostrar los nuevos productos que salieron a la venta.</p>
+                <p>
+                    <a href="https://github.com/Hades2002/emailmarketing_coolermaster" target="_blank">Codigo</a>
+                    <a href="https://hades2002.github.io/emailmarketing_coolermaster/" target="_blank">Vista previa</a>
                 </p>
                 <a href="https://hades2002.github.io/emailmarketing_coolermaster/" target="_blank">
                     <img src="/assets/img/coolermaster.png">
@@ -112,11 +128,15 @@
             </section>
             <hr>
             <section>
-                <p><b>Static page</b> - Landing page for lawyers</p>
-                <p>Simple page for a legal study they wanted a simple and simple page.</p>
+                <p><b>Static page</b> - Landing page para un abogado</p>
                 <p>
-                    <a href="https://github.com/Hades2002/abogado_bstrap5" target="_blank">Code</a>
-                    <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">Live view</a>
+                    <span>HTML</span>
+                    <span>CSS</span>
+                </p>
+                <p>Pagina sencilla para un estudio juridico.</p>
+                <p>
+                    <a href="https://github.com/Hades2002/abogado_bstrap5" target="_blank">Código</a>
+                    <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">Vista previa</a>
                 </p>
                 <a href="https://hades2002.github.io/abogado_bstrap5/" target="_blank">
                     <img src="/assets/img/law.png">
@@ -125,7 +145,7 @@
             <hr>
         </main>
         <footer>
-            <p><strong>Created with love 💓</strong></p>
+            <p><strong>Creado con amor y con el objetivo de : simple y eficaz 💓</strong></p>
         </footer>
     </body>
 </body>
