--- a/projecjs.html
+++ b/projecjs.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
     <title>Proyectos de Silva Miguel</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -50,15 +52,12 @@
                 </p>
                 <p>El objetivo de este proyecto es notificar los partidos y transmisiones del equipo deportivo KRU SPORT. Usando la API de contracción. Disponible solo para navegadores Chrome.</p>
                 <p>
-                    <strong>
-                        <a href="" target="_blank">Código/a>
-                        <a href="" target="_blank">Vista previa</a>
+                    <a href="" target="_blank">Código</a>
+                    <a href="" target="_blank">Vista previa</a>
                 </p>
-                <!---
-                    <a href="" target="_blank">
-                    </a>
-                    -->
-                <img src="/assets/img/kru.jpg">
+                <a href="https://educarapp.herokuapp.com" target="_blank">
+                    <img src="./assets/img/kru.jpg">
+                </a>
             </section>
             <hr>
             <section>
