--- a/projecjs.html
+++ b/projecjs.html
@@ -31,7 +31,7 @@
             <section>
                 <p><b>Web Application</b> - educAR</p>
                 <p>
-                    <span>Node.js</span>
+                    <span>Node.js /</span>
                     <span>Boostrap 5</span>
                 </p>
                 <p>El objetivo de esta aplicación web fue basarse en la pagina oficial CLASSROM, y poder llegar a replicar toda su lógica detrás y llegar armar una aplicación completa. Fue un proyecto realizado en mi etapa estudiantil en la materia "PRACTICAS PROFESIONALIZANTES" como Técnico en Computación.</p>
@@ -47,7 +47,7 @@
             <section>
                 <p><b>Chrome extension</b> - KRÜ esports </p>
                 <p>
-                    <span>Javascript</span>
+                    <span>Javascript /</span>
                     <span>Api twitch</span>
                 </p>
                 <p>El objetivo de este proyecto es notificar los partidos y transmisiones del equipo deportivo KRU SPORT. Usando la API de contracción. Disponible solo para navegadores Chrome.</p>
@@ -55,7 +55,7 @@
                     <a href="" target="_blank">Código</a>
                     <a href="" target="_blank">Vista previa</a>
                 </p>
-                <a href="https://educarapp.herokuapp.com" target="_blank">
+                <a href="" target="_blank">
                     <img src="./assets/img/kru.jpg">
                 </a>
             </section>
@@ -63,7 +63,7 @@
             <section>
                 <p><b>Bot para discord</b> - tournamentTYRAKZ</p>
                 <p>
-                    <span>Javascript</span>
+                    <span>Javascript /</span>
                     <span>Api discord</span>
                 </p>
                 <p>El objetivo del BOT fue crear un sistema de registración avanzado ambientado para torneos competitivos, donde sus equipos puedan tener canales de voz personalizados y exclusivos para ellos.</p>
@@ -82,7 +82,7 @@
             <section>
                 <p><b>Bot para telegram</b> - RBM Bussines</p>
                 <p>
-                    <span>Javascript</span>
+                    <span>Javascript /</span>
                     <span>Api telegram</span>
                 </p>
                 <p>El objetivo del BOT fue automatizar un registro de usuarios que iniciaba y finalizaba sin presencia de un humano, donde en ese intervalo de tiempo los usuarios mediante un comando se registraban a la lista. Esto permitiría ahorrar personal.</p>
@@ -112,7 +112,7 @@
             <section>
                 <p><b>Email marketing</b> - Cooler Master</p>
                 <p>
-                    <span>HTML</span>
+                    <span>HTML /</span>
                     <span>Boostrap 5</span>
                 </p>
                 <p>
@@ -129,7 +129,7 @@
             <section>
                 <p><b>Static page</b> - Landing page para un abogado</p>
                 <p>
-                    <span>HTML</span>
+                    <span>HTML /</span>
                     <span>CSS</span>
                 </p>
                 <p>Pagina sencilla para un estudio juridico.</p>
