--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <hr>
         <section>
             <p>
-                <a href="./projecjs">Projectos</a>
+                <a href="./projecjs.html">Projectos</a>
                 <a href="./assets/resume/resume.pdf" target="_blank">Resumen</a>
             </p>
             <p>
@@ -38,12 +38,12 @@
         <section>
             <p>¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.</p>
             <p>Me gradué de técnico en computación y actualmente estudio ingeniería en informática en la <strong>Universidad de Buenos Aires. </strong></p>
-            <p>Actualmente en mi carrera como <strong>desarrollador back-end</strong>, dirigido a desarrollador de software.</p></p>
+            <p>Actualmente en mi carrera como <strong>desarrollador back-end</strong>, apuntando como desarrollador de software.</p></p>
         </section>
         <hr>
     </main>
     <footer>
-        <p><strong>Creado con amor y con el objetivo de : simple y eficaz 💓</strong></p>
+        <p><strong>Creado con amor 💓</strong></p>
     </footer>
 </body>
 </html>
