--- a/projecjs.html
+++ b/projecjs.html
@@ -12,7 +12,7 @@
 <body>
     <body class="s1">
         <header>
-            <h1>Proyectos📂</h1>
+            <h1>Proyectos más destacados📂</h1>
         </header>
         <main>
             <hr>
@@ -24,12 +24,12 @@
                     <strong>Trabajé en: </strong>React.js, Amazon Web Services.<br>
                     <strong>Intereses en: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
                     <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                    <p>Más información <a href="https://silvamiguel.com/">aquí</a></p>
+                    <p>Más información <a href="./index.html">aquí</a></p>
                 </p>
             </section>
             <hr>
             <section>
-                <p><b>Web Application</b> - educAR</p>
+                <p><strong>Web Application</strong> - educAR</p>
                 <p>
                     <span>Node.js /</span>
                     <span>Boostrap 5</span>
@@ -45,10 +45,10 @@
             </section>
             <hr>
             <section>
-                <p><b>Chrome extension</b> - KRÜ esports </p>
+                <p><strong>Chrome extension</strong> - KRÜ esports </p>
                 <p>
-                    <span>Javascript /</span>
-                    <span>Api twitch</span>
+                    <span>JavaScript /</span>
+                    <span>API Twitch</span>
                 </p>
                 <p>El objetivo de este proyecto es notificar los partidos y transmisiones del equipo deportivo KRU SPORT. Usando la API de contracción. Disponible solo para navegadores Chrome.</p>
                 <p>
@@ -61,10 +61,10 @@
             </section>
             <hr>
             <section>
-                <p><b>Bot para discord</b> - tournamentTYRAKZ</p>
+                <p><strong>Bot para discord</strong> - tournamentTYRAKZ</p>
                 <p>
-                    <span>Javascript /</span>
-                    <span>Api discord</span>
+                    <span>JavaScript /</span>
+                    <span>API Discord</span>
                 </p>
                 <p>El objetivo del BOT fue crear un sistema de registración avanzado ambientado para torneos competitivos, donde sus equipos puedan tener canales de voz personalizados y exclusivos para ellos.</p>
                 <p>
@@ -80,10 +80,10 @@
             </section>
             <hr>
             <section>
-                <p><b>Bot para telegram</b> - RBM Bussines</p>
+                <p><strong>Bot para telegram</strong> - RBM Bussines</p>
                 <p>
-                    <span>Javascript /</span>
-                    <span>Api telegram</span>
+                    <span>JavaScript /</span>
+                    <span>API Telegram</span>
                 </p>
                 <p>El objetivo del BOT fue automatizar un registro de usuarios que iniciaba y finalizaba sin presencia de un humano, donde en ese intervalo de tiempo los usuarios mediante un comando se registraban a la lista. Esto permitiría ahorrar personal.</p>
                 <p>
@@ -95,9 +95,9 @@
             </section>
             <hr>
             <section>
-                <p><b>Web Scraping</b> - Scraping precio de compragamer</p>
+                <p><strong>Web Scraping</strong> - Scraping precio de compragamer</p>
                 <p>
-                    <span>Javascript</span>
+                    <span>JavaScript</span>
                 </p>
                 <p>El objetivo del BOT fue crear un aviso personalizado mediante la herramienta webScraping. Donde uno seleccionara los productos que desee y por vía Telegram le avisara cuando este en stock, sin stock, o si bajo de precio.
                 </p>
@@ -110,7 +110,7 @@
             </section>
             <hr>
             <section>
-                <p><b>Email marketing</b> - Cooler Master</p>
+                <p><strong>Email marketing</strong> - Cooler Master</p>
                 <p>
                     <span>HTML /</span>
                     <span>Boostrap 5</span>
@@ -127,7 +127,7 @@
             </section>
             <hr>
             <section>
-                <p><b>Static page</b> - Landing page para un abogado</p>
+                <p><strong>Static page</strong> - Landing page para un estudio jurídico</p>
                 <p>
                     <span>HTML /</span>
                     <span>CSS</span>
@@ -144,7 +144,7 @@
             <hr>
         </main>
         <footer>
-            <p><strong>Creado con amor y con el objetivo de : simple y eficaz 💓</strong></p>
+            <p><strong>Creado con amor 💓</strong></p>
         </footer>
     </body>
 </body>
