--- a/projecjs.html
+++ b/projecjs.html
@@ -24,7 +24,7 @@
                     <strong>Trabajé en: </strong>React.js, Amazon Web Services.<br>
                     <strong>Intereses en: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
                     <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                    <p>Más información <a href="./index.html">aquí</a></p>
+                    <p>Más información <a href="./">aquí</a></p>
                 </p>
             </section>
             <hr>
