--- a/projecjs.html
+++ b/projecjs.html
@@ -17,21 +17,24 @@
         <main>
             <hr>
             <section>
-                <p><strong>Backend developer</strong> proyectos, encontrar <a href="./assets/resume/resume.pdf" target="_blank">mi resumen aqui</a></p>
+                <p><strong>Backend developer</strong> con enfoque principal en Javascript + React: <a href="./assets/resume/resume.pdf" target="_blank">Descargar mi CV</a></p>
                 <p>
-                    <strong>Software skils</strong><br>
-                    <strong>Competentes en: </strong>Javascript, Node.js, HTML5, CSS, C#. <br>
-                    <strong>Trabajé en: </strong>React.js, Amazon Web Services.<br>
-                    <strong>Intereses en: </strong>Mobile Dev, Al, Graphics, UI Research.</p>
-                    <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                    <p>Más información <a href="./">aquí</a></p>
+                    <strong>Software skils</strong>
+                    <div class="skills">
+                        <strong>Competentes en: </strong>Javascript, Node.js, HTML5, CSS, C#.<br>
+                        <strong>Trabajé en: </strong>React.js, Amazon Web Services.<br>
+                        <strong>Intereses en: </strong>Mobile Dev, Al, Graphics, UI Research.<br>
+                    </div>
+                </p>
+                        <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
+                        <p>Más información <a href="./index.html">aquí</a></p>
                 </p>
             </section>
             <hr>
             <section>
                 <p><strong>Web Application</strong> - educAR</p>
                 <p>
-                    <span>Node.js /</span>
+                    <span>Node.js</span>
                     <span>Boostrap 5</span>
                 </p>
                 <p>El objetivo de esta aplicación web fue basarse en la pagina oficial CLASSROM, y poder llegar a replicar toda su lógica detrás y llegar armar una aplicación completa. Fue un proyecto realizado en mi etapa estudiantil en la materia "PRACTICAS PROFESIONALIZANTES" como Técnico en Computación.</p>
@@ -47,7 +50,7 @@
             <section>
                 <p><strong>Chrome extension</strong> - KRÜ esports </p>
                 <p>
-                    <span>JavaScript /</span>
+                    <span>JavaScript</span>
                     <span>API Twitch</span>
                 </p>
                 <p>El objetivo de este proyecto es notificar los partidos y transmisiones del equipo deportivo KRU SPORT. Usando la API de contracción. Disponible solo para navegadores Chrome.</p>
@@ -63,7 +66,7 @@
             <section>
                 <p><strong>Bot para discord</strong> - tournamentTYRAKZ</p>
                 <p>
-                    <span>JavaScript /</span>
+                    <span>JavaScript</span>
                     <span>API Discord</span>
                 </p>
                 <p>El objetivo del BOT fue crear un sistema de registración avanzado ambientado para torneos competitivos, donde sus equipos puedan tener canales de voz personalizados y exclusivos para ellos.</p>
@@ -82,7 +85,7 @@
             <section>
                 <p><strong>Bot para telegram</strong> - RBM Bussines</p>
                 <p>
-                    <span>JavaScript /</span>
+                    <span>JavaScript</span>
                     <span>API Telegram</span>
                 </p>
                 <p>El objetivo del BOT fue automatizar un registro de usuarios que iniciaba y finalizaba sin presencia de un humano, donde en ese intervalo de tiempo los usuarios mediante un comando se registraban a la lista. Esto permitiría ahorrar personal.</p>
@@ -112,7 +115,7 @@
             <section>
                 <p><strong>Email marketing</strong> - Cooler Master</p>
                 <p>
-                    <span>HTML /</span>
+                    <span>HTML</span>
                     <span>Boostrap 5</span>
                 </p>
                 <p>
@@ -129,7 +132,7 @@
             <section>
                 <p><strong>Static page</strong> - Landing page para un estudio jurídico</p>
                 <p>
-                    <span>HTML /</span>
+                    <span>HTML</span>
                     <span>CSS</span>
                 </p>
                 <p>Pagina sencilla para un estudio juridico.</p>
