--- a/index.html
+++ b/index.html
@@ -7,8 +7,37 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
-    <title>Silva Miguel</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon-32x32.png">
+    <!-- Primary Meta Tags -->
+    <title>Silva Miguel Angel - Backend Developer</title>
+    <meta name="title" content="Silva Miguel Angel - Backend Developer">
+    <meta name="description" content="¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.
+
+    Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Silva Miguel Angel - Backend Developer">
+    <meta property="og:description" content="¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.
+
+    Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Silva Miguel Angel - Backend Developer">
+    <meta property="twitter:description" content="¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.
+
+    Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    
+    <!-- SEO -->
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Silva Miguel Angel">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Programacion, Backend developer, Silva Miguel, Silva Miguel Angel, Silva Miguel Hogar Naval Stella Maris, Silva Miguel UBA, UBA, Silva Miguel Developer, Silva Miguel Desarrollador, Chrome extension kru sport  de silva Miguel, bots silva miguel, telegram bot, bot discord, creacion de bots, creacion de bots de discord, creacion de bots de telegram">
 </head>
 <body class="s1">
     <header>
