--- a/index.html
+++ b/index.html
@@ -4,21 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Primary Meta Tags -->
+	<title>Silva Miguel - Backend developer</title>
+	<meta name="title" content="Silva Miguel - Backend developer">
+	<meta name="description" content="Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos. Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+	<meta name="keywords" content="developer, programacion, silva miguel, silva miguel developer, proyectos de silva miguel, miguel, silva, bots de discord, bots de telegram">
+	<meta name="author" content="Silva Miguel">
+    	<meta name="copyright" content="Silva Miguel">
+   	<meta name="robots" content="index">
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://silvamiguel.com/">
+	<meta property="og:title" content="Silva Miguel - Backend developer">
+	<meta property="og:description" content="Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos. Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+	<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://silvamiguel.com/">
+	<meta property="twitter:title" content="Silva Miguel - Backend developer">
+	<meta property="twitter:description" content="Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos. Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
+	<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon-32x32.png">
-    <!-- Primary Meta Tags -->
-    <title>Silva Miguel Angel - Backend Developer</title>
-    <meta name="title" content="Silva Miguel Angel - Backend Developer">
-    <meta name="description" content="¡Hola! Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos.
-
-    Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
-	
-    <!-- SEO -->
-    <meta name="author" content="Silva Miguel Angel">
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="Programacion, Backend developer, Silva Miguel, Silva Miguel Angel, Silva Miguel Hogar Naval Stella Maris, Silva Miguel UBA, UBA, Silva Miguel Developer, Silva Miguel Desarrollador, Chrome extension kru sport  de silva Miguel, bots silva miguel, telegram bot, bot discord, creacion de bots, creacion de bots de discord, creacion de bots de telegram">
 </head>
 <body class="s1">
     <header>
